feat: re-wire X and Y stepper motors in board so that X works as X axis and Y works as Y axis

--- a/printer.cfg
+++ b/printer.cfg
@@ -5,6 +5,15 @@
 # See docs/Config_Reference.md for a description of parameters.
 [include fluidd.cfg]
 
+[respond]
+
+[gcode_macro _bot_data]
+variable_lapse_video_size: 0
+variable_lapse_filename: 'None'
+variable_lapse_path: 'None'
+gcode:
+    M118 Setting bot lapse variables
+
 [mcu]
 serial: /dev/serial/by-id/usb-Klipper_lpc1769_10F00101E284D7955DC14662C42000F5-if00
 baud: 115200
@@ -24,10 +33,11 @@ max_velocity: 500
 max_accel: 2000
 max_z_velocity: 10
 max_z_accel: 100
+square_corner_velocity: 5.0
 
-# X <-> Y in firmware, should I change it in hardware?
-
-[stepper_y]
+# NOTE: swap X and Y in the board
+# Otherwise you'll have to swap them in firmware
+[stepper_x]
 enable_pin: !P2.1
 step_pin: P2.2
 dir_pin: !P2.6
@@ -40,10 +50,10 @@ homing_speed: 50
 second_homing_speed: 5
 homing_retract_dist: 10.0
 
-[stepper_x]
+[stepper_y]
 enable_pin: !P2.8
 step_pin: P0.19
-dir_pin: !P0.20
+dir_pin: P0.20
 endstop_pin: ^P1.28
 microsteps: 16
 rotation_distance: 40
@@ -56,11 +66,11 @@ homing_retract_dist: 10.0
 [stepper_z]
 enable_pin: !P0.21
 step_pin: P0.22
-dir_pin: !P2.11
+dir_pin: P2.11
 endstop_pin: ^P1.27
 microsteps: 16
 rotation_distance: 8
-position_endstop: 0.0
+position_endstop: 400.0
 position_max: 400
 homing_speed: 50
 second_homing_speed: 5
@@ -69,7 +79,7 @@ homing_retract_dist: 10.0
 [extruder]
 enable_pin: !P2.12
 step_pin: P2.13
-dir_pin: !P0.11
+dir_pin: P0.11
 microsteps: 16
 rotation_distance: 33.500
 nozzle_diameter: 0.400
@@ -104,12 +114,12 @@ pin: P2.3
 # TMC2208 configuration
 ########################################
 
-[tmc2208 stepper_y]
+[tmc2208 stepper_x]
 uart_pin: P1.10
 run_current: 0.800
 stealthchop_threshold: 999999
 
-[tmc2208 stepper_x]
+[tmc2208 stepper_y]
 uart_pin: P1.9
 run_current: 0.800
 stealthchop_threshold: 999999
