feat: add bed screws

--- a/printer.cfg
+++ b/printer.cfg
@@ -66,11 +66,11 @@ homing_retract_dist: 10.0
 [stepper_z]
 enable_pin: !P0.21
 step_pin: P0.22
-dir_pin: P2.11
+dir_pin: !P2.11
 endstop_pin: ^P1.27
 microsteps: 16
 rotation_distance: 8
-position_endstop: 400.0
+position_endstop: 0
 position_max: 400
 homing_speed: 50
 second_homing_speed: 5
@@ -109,6 +109,11 @@ max_temp: 100
 [fan]
 pin: P2.3
 
+[bed_screws]
+screw1: 223, 223
+screw2: 32, 223
+screw3: 32, 32
+screw4: 223, 32
 
 ########################################
 # TMC2208 configuration
